--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ torch==2.5.1  # Match the version used in training
 torchvision==0.20.1  # Match the version used in training
 Pillow==11.0.0 
 numpy==1.26.4
+slowapi==0.1.9
 python-multipart
 ipywidgets
